--- a/src/comps/olloJ/olloj.scss
+++ b/src/comps/olloJ/olloj.scss
@@ -6,6 +6,14 @@
           object-fit: contain;
         }
       }
+      .card-content {
+        .card-details {
+          width: 100%;
+          p {
+            padding-left: 5px;
+          }
+        }
+      }
     }
   }
 }
